--- a/build.xml
+++ b/build.xml
@@ -34,7 +34,8 @@
         <os arch="sparcv9"/>
         <os arch="s390x"/>
         <os arch="ppc64le"/>
-        <os arch="aarch64"/>
+	<os arch="aarch64"/>
+	<os arch="loongarch64"/>
       </or>
     </condition>
     <condition property="run.jvm.model" value="-d32">
@@ -101,6 +102,11 @@
     <condition property="platform.cpu" value="aarch64">
       <or>
         <os arch="aarch64"/>
+      </or>
+    </condition>
+    <condition property="platform.cpu" value="loongarch64">
+      <or>
+        <os arch="loongarch64"/>
       </or>
     </condition>
     <condition property="platform.os" value="Windows">
